--- a/index.html
+++ b/index.html
@@ -138,7 +138,6 @@
 
 </section>
 
-
 <section class="wedding_05 mt-5">
 
 <div class="container_wedding_05">
@@ -147,14 +146,15 @@
 
   <p>Quer tornar seu casamento ainda mais especial?Cadastre-se agora e tenha acesso aos nossos serviços exclusivos para criar a celebração dos seus sonhos com todo o charme sertanejo! Faça seu cadastro e dê o primeiro passo para o “sim” mais lindo da sua vida!</p>
 
-  <p>🌾Decoração rústica encantadora</p>
+  <p>Decoração rústica encantadora</p>
 
-  <p>🎶Música ao vivo para embalar seu amor</p>
+  <p>Música ao vivo para embalar seu amor</p>
 
-  <p>🥂Buffet personalizado com sabores do campo</p>
+  <p>Buffet personalizado com sabores do campo</p>
 
-  <p>🐎Opções autênticas para um casamento inesquecível</p>
+  <p>Opções autênticas para um casamento inesquecível</p>
 
+</div>
 
 </section>
 
@@ -182,10 +182,10 @@
 
       <div class="col-lg-3 col-md-6 col-sm-12">
         <h4>Redes sociais</h4>
-        <p>Instagram</p>
-        <p>Facebook</p>
-        <p>WhatsApp</p>
-        <p>Youtube</p>
+        <a href="https://instagram.com" target="_blank">Instagram</a>
+        <a href="https://facebook.com" target="_blank">Instagram</a>
+        <a href="https://wa.me/seunumero.com" target="_blank">Instagram</a>
+        <a href="https://youtube.com" target="_blank">Instagram</a>
       </div>
 
       <div class="col-lg-3 col-md-6 col-sm-12">
@@ -200,7 +200,7 @@
 
   <section class="text-center py-3">
     <figure>
-      <img src="img/logo/Logo.jpg" alt="Logo" class="logo_footer">
+      <img src="img/logo/Logo.jpg" alt="Logo Casamento Sertanejo" class="logo_footer">
     </figure>
     <p>&copy; 2025 - Todos os direitos reservados</p>
   </section>
