--- a/index.html
+++ b/index.html
@@ -224,6 +224,16 @@
         <div class="row">
 
           <div class="mb-3 col-12">
+            <label for="CPF">Nome do noivo:</label>
+            <input type="text" name="CPF" class="form-control">
+          </div>
+
+          <div class="mb-3 col-12">
+            <label for="CPF">Nome da noiva:</label>
+            <input type="text" name="CPF" class="form-control">
+          </div>
+
+          <div class="mb-3 col-12">
             <label for="Email">Email:</label>
             <input type="text" name="Email" class="form-control">
           </div>
@@ -235,6 +245,11 @@
 
           <div class="mb-3 col-6">
             <label for="Senha">Senha:</label>
+            <input type="text" name="Senha" class="form-control">
+          </div>
+
+          <div class="mb-3 col-6">
+            <label for="Senha">Confirmar senha:</label>
             <input type="text" name="Senha" class="form-control">
           </div>
 
