--- a/index.html
+++ b/index.html
@@ -196,11 +196,14 @@
         <p>Telefone: (00) 0000-0000</p>
       </div>
     </div>
-  </section>
+
+    
 
   <section class="text-center py-3">
     <figure>
-      <img src="img/logo/Logo.jpg" alt="Logo Casamento Sertanejo" class="logo_footer">
+    <a data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
+      <img src="img/logo/Logo.jpg" alt="Logo Casamento Sertanejo" class="logo_footer">>
+    </a>
     </figure>
     <p>&copy; 2025 - Todos os direitos reservados</p>
   </section>
