texto do offcanvas no logo

--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
     
 
   <section class="text-center py-3">
+    <h7 class="text-center">clique aqui</h7>
     <figure>
     <a data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
       <img src="img/logo/Logo.jpg" alt="Logo Casamento Sertanejo" class="logo_footer">>
